# grove

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
bridge/: __init__.py  grove_bridge.py  test_grove_bridge.py
docs/: implementation-blueprint.md  index.md  install.md  user-guide.md
docs/architecture/: index.md  repository.md  runtime.md
scripts/: install.sh  package-release.sh  run_bridge_dev.sh
src/: action.rs  app.rs  bootstrap.rs  config.rs  debug_log.rs  error.rs  event.rs  file_ops.rs  lib.rs  main.rs  open.rs  state.rs  storage.rs  watcher.rs
src/actions/: catalog.rs
src/bridge/: client.rs  protocol.rs
src/git/: backend.rs
src/preview/: image.rs  loader.rs  mermaid.rs  mod.rs  model.rs  render.rs
src/search/: content.rs  mod.rs
src/tree/: filter.rs  indexer.rs  loader.rs  mod.rs  model.rs  walk.rs
src/ui/: action_bar.rs  bookmarks.rs  command_palette.rs  content_search.rs  context_menu.rs  dialog.rs  layout.rs  metadata.rs  mod.rs  path_filter.rs  preview.rs  root.rs  roots.rs  status_bar.rs  tabs.rs  target_picker.rs  theme.rs  tree.rs
tests/: action_catalog.rs  app_config.rs  bootstrap_smoke.rs  bridge_client.rs  config_persistence.rs  content_search.rs  contracts_compile.rs  file_ops.rs  git_backend.rs  install_script.sh  open_commands.rs  package_release.sh  path_filter.rs  preview_render_cache.rs  tree_model.rs  ui_shell_snapshot.rs  watcher_refresh.rs
tools/mermaid/: package-lock.json  package.json  render_ascii.mjs
