[package]
name = "grove"
version = "0.1.6"
edition = "2024"

[dependencies]
arboard = "3.6"
base64 = "0.22"
crossterm = "0.29"
git2 = "0.20"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
ignore = "0.4.25"
libc = "0.2"
notify = "8"
nucleo-matcher = "0.3.1"
pulldown-cmark = "0.13.1"
ratatui = "0.30.0"
ratskin = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
termimad = "0.34.1"
thiserror = "2"
toml = "0.9"
trash = "5"
